--- a/Java Programs/Exam2pPractice/pom.xml
+++ b/Java Programs/Exam2pPractice/pom.xml
@@ -11,4 +11,16 @@
         <maven.compiler.target>19</maven.compiler.target>
         <exec.mainClass>com.mycompany.exam2ppractice.Exam2pPractice</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+    </dependencies>
 </project>
